[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytoolbox"
version = "0.1.0"
authors = [{name = "Elias Stenberg", email = "eliasstenberg95@gmail.com"}]
description = "A toolbox with scripts for pen-testing purposes"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"

dependencies = [
  "railroad-diagrams >=3.0.1",
  "requests >=2.0",
  "scapy >=2.4",
  "beautifulsoup4 >=4.9",
  "paramiko >=2.7",
  "python-nmap >=0.6",
  "sqlalchemy >=1.3",
  "cryptography >=3.0",
  "pyopenssl >=19.0",
  "mechanize >=0.4",
  "impacket >=0.9",
  "gitpython"
]

[project.urls]
homepage = "https://example.com/"
repository = "https://example.com/repo"
documentation = "https://example.com/docs"

[project.scripts]
pentest = "scripts.main:main"
mycom1 = "scripts.mycom1:main"
mycom2 = "scripts.mycom2:main"
mycom3 = "scripts.mycom3:main"
catfact = "scripts.catfact:main"
bruteforce = "scripts.bruteforce:main"
bfselenium = "scripts.bfselenium:main"
commits = "scripts.count_commits:main"
emails = "scripts.email_api:main"
subdomain = "scripts.subdomain_enumeration:main"
subpage = "scripts.subpage_enumeration:main"
